testsuite/tests/parsing/int_and_float_with_modifier.compilers.reference
[
  structure_item (int_and_float_with_modifier.ml[9+0]..[10+57])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[9+4]..[9+28])
          Ppat_var "int_with_custom_modifier" (int_and_float_with_modifier.ml[9+4]..[9+28])
        expression (int_and_float_with_modifier.ml[10+2]..[10+57])
          Pexp_constant PConst_int (1234567890_1234567890_1234567890_1234567890_1234567890,Some z)
    ]
  structure_item (int_and_float_with_modifier.ml[11+0]..[12+58])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[11+4]..[11+30])
          Ppat_var "float_with_custom_modifier" (int_and_float_with_modifier.ml[11+4]..[11+30])
        expression (int_and_float_with_modifier.ml[12+2]..[12+58])
          Pexp_constant PConst_float (1234567890_1234567890_1234567890_1234567890_1234567890.,Some z)
    ]
  structure_item (int_and_float_with_modifier.ml[14+0]..[14+21])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[14+4]..[14+9])
          Ppat_var "int32" (int_and_float_with_modifier.ml[14+4]..[14+9])
        expression (int_and_float_with_modifier.ml[14+16]..[14+21])
          Pexp_constant PConst_int (1234,Some l)
    ]
  structure_item (int_and_float_with_modifier.ml[15+0]..[15+21])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[15+4]..[15+9])
          Ppat_var "int64" (int_and_float_with_modifier.ml[15+4]..[15+9])
        expression (int_and_float_with_modifier.ml[15+16]..[15+21])
          Pexp_constant PConst_int (1234,Some L)
    ]
  structure_item (int_and_float_with_modifier.ml[16+0]..[16+21])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[16+4]..[16+13])
          Ppat_var "nativeint" (int_and_float_with_modifier.ml[16+4]..[16+13])
        expression (int_and_float_with_modifier.ml[16+16]..[16+21])
          Pexp_constant PConst_int (1234,Some n)
    ]
  structure_item (int_and_float_with_modifier.ml[18+0]..[18+32])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[18+4]..[18+24])
          Ppat_var "hex_without_modifier" (int_and_float_with_modifier.ml[18+4]..[18+24])
        expression (int_and_float_with_modifier.ml[18+27]..[18+32])
          Pexp_constant PConst_int (0x32f,None)
    ]
  structure_item (int_and_float_with_modifier.ml[19+0]..[19+32])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[19+4]..[19+21])
          Ppat_var "hex_with_modifier" (int_and_float_with_modifier.ml[19+4]..[19+21])
        expression (int_and_float_with_modifier.ml[19+27]..[19+32])
          Pexp_constant PConst_int (0x32,Some g)
    ]
  structure_item (int_and_float_with_modifier.ml[21+0]..[21+33])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[21+4]..[21+25])
          Ppat_var "float_without_modifer" (int_and_float_with_modifier.ml[21+4]..[21+25])
        expression (int_and_float_with_modifier.ml[21+28]..[21+33])
          Pexp_constant PConst_float (1.2e3,None)
    ]
  structure_item (int_and_float_with_modifier.ml[22+0]..[22+32])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[22+4]..[22+22])
          Ppat_var "float_with_modifer" (int_and_float_with_modifier.ml[22+4]..[22+22])
        expression (int_and_float_with_modifier.ml[22+28]..[22+32])
          Pexp_constant PConst_float (1.2,Some g)
    ]
]

File "int_and_float_with_modifier.ml", line 10, characters 2-57:
10 |   1234567890_1234567890_1234567890_1234567890_1234567890z
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Unknown modifier "z" for literal "1234567890_1234567890_1234567890_1234567890_1234567890z"
